// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`text when custom config is provided when the custom config overrides a value should replace the default value 1`] = `
Object {
  "align": Object {
    "center": Object {
      "text-align": "center",
    },
    "justify": Object {
      "text-align": "justify",
    },
    "left": Object {
      "text-align": "left",
    },
    "right": Object {
      "text-align": "right",
    },
  },
  "decoration": Object {
    "lineThrough": Object {
      "text-decoration": "line-through",
    },
    "none": Object {
      "text-decoration": "none",
    },
    "underline": Object {
      "text-decoration": "underline",
    },
  },
  "family": Object {
    "sans": Object {
      "font-family": "-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji",
    },
    "serif": Object {
      "font-family": "Georgia, Times, Times New Roman, serif",
    },
  },
  "letterSpacing": Object {
    "large": Object {
      "letter-spacing": ".05em",
    },
    "medium": Object {
      "letter-spacing": ".025em",
    },
    "none": Object {
      "letter-spacing": "0",
    },
    "small": Object {
      "letter-spacing": "-.05em",
    },
  },
  "lineHeight": Object {
    "large": Object {
      "line-height": "2",
    },
    "medium": Object {
      "line-height": "1.5",
    },
    "none": Object {
      "line-height": "1",
    },
    "small": Object {
      "line-height": "1.25",
    },
  },
  "size": Object {
    "large": Object {
      "font-size": "2.5rem",
    },
    "medium": Object {
      "font-size": "1.25rem",
    },
    "small": Object {
      "font-size": ".5rem",
    },
  },
  "style": Object {
    "italic": Object {
      "font-style": "italic",
    },
    "normal": Object {
      "font-style": "normal",
    },
    "oblique": Object {
      "font-style": "oblique",
    },
  },
  "transform": Object {
    "capitalize": Object {
      "text-transform": "capitalize",
    },
    "lowercase": Object {
      "text-transform": "lowercase",
    },
    "none": Object {
      "text-transform": "none",
    },
    "uppercase": Object {
      "text-transform": "uppercase",
    },
  },
  "weight": Object {
    "bold": Object {
      "font-weight": "700",
    },
    "normal": Object {
      "font-weight": "normal",
    },
    "thin": Object {
      "font-weight": "200",
    },
  },
}
`;

exports[`text when custom config is provided when the custom config provides a new value should add the value and not amend any existing values 1`] = `
Object {
  "align": Object {
    "center": Object {
      "text-align": "center",
    },
    "justify": Object {
      "text-align": "justify",
    },
    "left": Object {
      "text-align": "left",
    },
    "right": Object {
      "text-align": "right",
    },
  },
  "decoration": Object {
    "lineThrough": Object {
      "text-decoration": "line-through",
    },
    "none": Object {
      "text-decoration": "none",
    },
    "underline": Object {
      "text-decoration": "underline",
    },
  },
  "family": Object {
    "sans": Object {
      "font-family": "-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji",
    },
    "serif": Object {
      "font-family": "Georgia, Times, Times New Roman, serif",
    },
  },
  "letterSpacing": Object {
    "large": Object {
      "letter-spacing": ".05em",
    },
    "medium": Object {
      "letter-spacing": ".025em",
    },
    "none": Object {
      "letter-spacing": "0",
    },
    "small": Object {
      "letter-spacing": "-.05em",
    },
  },
  "lineHeight": Object {
    "large": Object {
      "line-height": "2",
    },
    "medium": Object {
      "line-height": "1.5",
    },
    "none": Object {
      "line-height": "1",
    },
    "small": Object {
      "line-height": "1.25",
    },
  },
  "size": Object {
    "extrasmall": Object {
      "font-size": ".25rem",
    },
    "large": Object {
      "font-size": "2.5rem",
    },
    "medium": Object {
      "font-size": "1.25rem",
    },
    "small": Object {
      "font-size": "1rem",
    },
  },
  "style": Object {
    "italic": Object {
      "font-style": "italic",
    },
    "normal": Object {
      "font-style": "normal",
    },
    "oblique": Object {
      "font-style": "oblique",
    },
  },
  "transform": Object {
    "capitalize": Object {
      "text-transform": "capitalize",
    },
    "lowercase": Object {
      "text-transform": "lowercase",
    },
    "none": Object {
      "text-transform": "none",
    },
    "uppercase": Object {
      "text-transform": "uppercase",
    },
  },
  "weight": Object {
    "bold": Object {
      "font-weight": "700",
    },
    "normal": Object {
      "font-weight": "normal",
    },
    "thin": Object {
      "font-weight": "200",
    },
  },
}
`;

exports[`text when no custom config is provided should return the default config 1`] = `
Object {
  "align": Object {
    "center": Object {
      "text-align": "center",
    },
    "justify": Object {
      "text-align": "justify",
    },
    "left": Object {
      "text-align": "left",
    },
    "right": Object {
      "text-align": "right",
    },
  },
  "decoration": Object {
    "lineThrough": Object {
      "text-decoration": "line-through",
    },
    "none": Object {
      "text-decoration": "none",
    },
    "underline": Object {
      "text-decoration": "underline",
    },
  },
  "family": Object {
    "sans": Object {
      "font-family": "-apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Helvetica Neue, Arial, Noto Sans, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol, Noto Color Emoji",
    },
    "serif": Object {
      "font-family": "Georgia, Times, Times New Roman, serif",
    },
  },
  "letterSpacing": Object {
    "large": Object {
      "letter-spacing": ".05em",
    },
    "medium": Object {
      "letter-spacing": ".025em",
    },
    "none": Object {
      "letter-spacing": "0",
    },
    "small": Object {
      "letter-spacing": "-.05em",
    },
  },
  "lineHeight": Object {
    "large": Object {
      "line-height": "2",
    },
    "medium": Object {
      "line-height": "1.5",
    },
    "none": Object {
      "line-height": "1",
    },
    "small": Object {
      "line-height": "1.25",
    },
  },
  "size": Object {
    "large": Object {
      "font-size": "2.5rem",
    },
    "medium": Object {
      "font-size": "1.25rem",
    },
    "small": Object {
      "font-size": "1rem",
    },
  },
  "style": Object {
    "italic": Object {
      "font-style": "italic",
    },
    "normal": Object {
      "font-style": "normal",
    },
    "oblique": Object {
      "font-style": "oblique",
    },
  },
  "transform": Object {
    "capitalize": Object {
      "text-transform": "capitalize",
    },
    "lowercase": Object {
      "text-transform": "lowercase",
    },
    "none": Object {
      "text-transform": "none",
    },
    "uppercase": Object {
      "text-transform": "uppercase",
    },
  },
  "weight": Object {
    "bold": Object {
      "font-weight": "700",
    },
    "normal": Object {
      "font-weight": "normal",
    },
    "thin": Object {
      "font-weight": "200",
    },
  },
}
`;
